[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-rl"
version = "0.1.0"
keywords = ["reinforcement-learning", "isaac", "leggedrobotics", "rl-pytorch"]
maintainers = [
  { name="Sol Choi", email="solchoi@yonsei.ac.kr" },
]
authors = [
  { name="Sol Choi", email="solchoi@yonsei.ac.kr" },
]
description = "ARC Lab's customized reinforcement learning library based on RSL-RL"
readme = { file = "README.md", content-type = "text/markdown"}
license = { text = "BSD-3-Clause" }

requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.10.0",
    "torchvision>=0.5.0",
    "numpy>=1.16.4",
    "GitPython",
    "onnx",
]

[project.urls]
Homepage = "https://github.com/S-CHOI-S/arc_rl"
Issues = "https://github.com/S-CHOI-S/arc_rl/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["arc_rl*"]

[tool.setuptools.package-data]
"arc_rl" = ["config/*", "licenses/*"]

[tool.isort]

py_version = 37
line_length = 120
group_by_package = true

# Files to skip
skip_glob = [".vscode/*"]

# Order of imports
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

# Extra standard libraries considered as part of python (permissive licenses)
extra_standard_library = [
    "numpy",
    "torch",
    "tensordict",
    "warp",
    "typing_extensions",
    "git",
]
# Imports from this repository
known_first_party = "arc_rl"

[tool.pyright]

include = ["arc_rl"]

typeCheckingMode = "basic"
pythonVersion = "3.7"
pythonPlatform = "Linux"
enableTypeIgnoreComments = true

# This is required as the CI pre-commit does not download the module (i.e. numpy, torch, prettytable)
# Therefore, we have to ignore missing imports
reportMissingImports = "none"
# This is required to ignore for type checks of modules with stubs missing.
reportMissingModuleSource = "none" # -> most common: prettytable in mdp managers

reportGeneralTypeIssues = "none"       # -> raises 218 errors (usage of literal MISSING in dataclasses)
reportOptionalMemberAccess = "warning" # -> raises 8 errors
reportPrivateUsage = "warning"
